# shader-sense

./: .gitattributes  .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: build.yml  deploy.yml
shader-intrinsic-parser/: Cargo.toml
shader-intrinsic-parser/src/: common.rs  main.rs
shader-intrinsic-parser/src/glsl/: extensions.rs  keywords.rs  methods.rs  mod.rs  types.rs
shader-intrinsic-parser/src/hlsl/: functions.rs  macros.rs  mod.rs  raytracing.rs  semantics.rs  types.rs  work_graph.rs
shader-intrinsic-parser/src/wgsl/: mod.rs
shader-language-server/: CHANGELOG.md  Cargo.toml  README.md
shader-language-server/src/: lib.rs  main.rs  server.rs
shader-language-server/src/server/: async_message.rs  common.rs  completion.rs  debug.rs  diagnostic.rs  document_symbol.rs  folding_range.rs  formatting.rs  goto.rs  hover.rs  inactive.rs  inlay_hint.rs  profile.rs  semantic_token.rs  server_config.rs  server_connection.rs  server_file_cache.rs  server_language_data.rs  shader_variant.rs  signature.rs  workspace_symbol.rs
shader-language-server/src/server/provider/: completion.rs  diagnostic.rs  document_symbol.rs  folding_range.rs  goto.rs  (+7 more)
shader-language-server/tests/: server_communication.rs  test_server.rs
shader-sense/: Cargo.toml
shader-sense-cli/: Cargo.toml  README.md
shader-sense-cli/src/: main.rs
shader-sense/examples/: main.rs
shader-sense/src/: include.rs  lib.rs  position.rs  shader.rs  shader_error.rs
shader-sense/src/symbols/: glsl_parser.rs  hlsl_parser.rs  intrinsics.rs  mod.rs  parser.rs  prepocessor.rs  shader_language.rs  shader_module.rs  shader_module_parser.rs  symbol_list.rs  symbol_parser.rs  symbol_provider.rs  symbol_tree.rs  symbols.rs  wgsl_parser.rs
shader-sense/src/symbols/glsl/: glsl-intrinsics.json  glsl_filter.rs  glsl_inactive.rs  glsl_parser.rs  glsl_preprocessor.rs  glsl_regions.rs  glsl_word.rs  glsl_word_chain.rs  mod.rs
shader-sense/src/symbols/hlsl/: hlsl-intrinsics.json  hlsl_filter.rs  hlsl_inactive.rs  hlsl_parser.rs  hlsl_preprocessor.rs  hlsl_regions.rs  hlsl_word.rs  hlsl_word_chain.rs  mod.rs
shader-sense/src/symbols/wgsl/: mod.rs  wgsl-intrinsics.json  wgsl_filter.rs  wgsl_parser.rs  wgsl_regions.rs
shader-sense/src/validator/: dxc.rs  glslang.rs  mod.rs  naga.rs  validator.rs
shader-sense/test/: config-override.json
shader-sense/test/glsl/: uniforms.frag.glsl
shader-sense/test/glsl/stages/: compute.comp.glsl  graphics.frag.glsl  graphics.geom.glsl  graphics.tesc.glsl  graphics.tese.glsl  graphics.vert.glsl  mesh.mesh.glsl  mesh.task.glsl  raytracing.rahit.glsl  raytracing.rcall.glsl  raytracing.rchit.glsl  raytracing.rgen.glsl  raytracing.rint.glsl  raytracing.rmiss.glsl
shader-sense/test/hlsl/: enum.hlsl  include-config.hlsl  include-level.hlsl  macro.hlsl  macro_other.hlsl  number-literals.hlsl  regions.hlsl  spirv-shader.hlsl  stack-overflow.hlsl  struct.hlsl  template.hlsl  utf8.hlsl  variants.hlsl
shader-sense/test/hlsl/folder/: folder-file.hlsl
shader-sense/test/hlsl/inc0/: level0.hlsl
shader-sense/test/hlsl/inc0/inc1/: level1.hlsl
shader-sense/test/hlsl/stages/: compute.hlsl  graphics.hlsl  mesh.hlsl  raytracing.hlsl
shader-sense/test/wgsl/stages/: compute.wgsl  graphics.wgsl
