[package]
name = "shader-sense"
description = "Library for runtime shader validation and symbol inspection"
repository = "https://github.com/antaalt/shader-sense"
keywords = ["shader", "validate", "hlsl", "glsl", "wgsl"]
categories = ["development-tools", "graphics"]
version = "1.0.0"
edition = "2021"
license-file = "../LICENSE"
readme = "../README.md"
rust-version = "1.88" # Minimal version required for HashSet::extract_if

[dependencies]
glslang = "0.6.1"
naga = { version = "24.0.0", features = ["wgsl-in"] }
regex = "1.10.4"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tree-sitter = "0.25.8"
tree-sitter-language = "0.1.0"
tree-sitter-glsl = "0.2.0"
tree-sitter-hlsl = "0.2.0"
# Slang support with tree-sitter-slang 0.3.1.
# Metal does not have rust lib neither tree-sitter
# Cg too old
# PSSL proprietary
# tree-sitter-wgsl-bevy has a PR for supporting tree-sitter-language https://github.com/tree-sitter-grammars/tree-sitter-wgsl-bevy/pull/19
#tree-sitter-wgsl-bevy = "0.2.0"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
# cannot load DXC dll in wasi
# There is an issue to compile DXC statically:
# https://github.com/Traverse-Research/hassle-rs/issues/57
hassle-rs = "0.11.0"
libloading = "0.8.8"